--- a/IoT Dallas of Things WPF/MainWindow.xaml
+++ b/IoT Dallas of Things WPF/MainWindow.xaml
@@ -2,29 +2,56 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+        xmlns:wpfanimated="http://wpfanimatedgif.codeplex.com"
         Title="SmartBag" Height="768" Width="1000"
         ResizeMode="NoResize"  Cursor="None" HorizontalAlignment="Center" VerticalAlignment="Center" BorderThickness="4" WindowStyle="None">
 
     <Grid Margin="0,0,0,45">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="563*"/>
-            <ColumnDefinition Width="429*"/>
-        </Grid.ColumnDefinitions>
-        <Label Content="Smart Tag Number:" x:Name="TagLabel" FontSize="40" Margin="0,50,302,580" HorizontalAlignment="Right" Width="376" Grid.ColumnSpan="2"/>
-        <Label Content="Bus Number:" x:Name="BusLabel" FontSize="26" Margin="306,221,99.164,428" Width="158"/>
-        <Label Content="First Name:" x:Name="FirstNameLabel" FontSize="26" Margin="320,287,105.164,361" />
-        <Label Content="Last Name:" x:Name="LastNameLabel" FontSize="26" Margin="328,347,101.164,300" />
-        <Label Content="Phone Number:" x:Name="PhoneLabel" FontSize="26" Margin="272,399,101.164,251"/>
+        <Grid x:Name="grid">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="563*"/>
+                <ColumnDefinition Width="429*"/>
+            </Grid.ColumnDefinitions>
+            <Label Content="Smart Tag Number:" x:Name="TagLabel" FontSize="40" Margin="0,50,302,580" HorizontalAlignment="Right" Width="376" Grid.ColumnSpan="2"/>
+            <Label Content="Bus Number:" x:Name="BusLabel" FontSize="26" Margin="306,221,99.164,428" Width="158"/>
+            <Label Content="First Name:" x:Name="FirstNameLabel" FontSize="26" Margin="320,287,105.164,361" />
+            <Label Content="Last Name:" x:Name="LastNameLabel" FontSize="26" Margin="328,347,101.164,300" />
+            <Label Content="Phone Number:" x:Name="PhoneLabel" FontSize="26" Margin="272,399,101.164,251"/>
 
-        <TextBlock x:Name="GreetingTextBlock" FontSize="50" Text="Please Scan An RFID Tag" Margin="224,200,222,418" Grid.ColumnSpan="2"/>
-        <Label x:Name="RFIDTextBlock" FontSize="36" Content="82003C84DDE7" Margin="367,109,368,529" Grid.ColumnSpan="2" />
-        <TextBox x:Name="BusNumTextBox" FontSize="24" Text="bus #" Height="42" Width="272" Margin="0,0,253,431" BorderThickness="0 0 0 1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Grid.ColumnSpan="2"/>
-        <TextBox x:Name="FNameTextBox" FontSize="24" Text="john" Height="42" Width="272" Margin="0,0,253,365" BorderThickness="0 0 0 1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Grid.ColumnSpan="2"/>
-        <TextBox x:Name="LNameTextBox" FontSize="24" Text="doe" Height="42" Width="272" Margin="0,0,253,305" BorderThickness="0 0 0 1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Grid.ColumnSpan="2"/>
-        <TextBox x:Name="PhoneTextBox" FontSize="24" Text="682-555-3412"  Height="42" Width="272" Margin="0,0,253,251" BorderThickness="0 0 0 1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Grid.ColumnSpan="2"/>
+            <!--<TextBlock x:Name="GreetingTextBlock" FontSize="50" Text="Please Scan An RFID Tag" Margin="224,200,222,418" Grid.ColumnSpan="2"/>-->
+            <Label x:Name="RFIDTextBlock" FontSize="36" Content="82003C84DDE7" Margin="367,109,368,529" Grid.ColumnSpan="2" />
+            <TextBox x:Name="BusNumTextBox" FontSize="24" Text="bus #" Height="42" Width="272" Margin="0,0,253,431" BorderThickness="0 0 0 1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Grid.ColumnSpan="2"/>
+            <TextBox x:Name="FNameTextBox" FontSize="24" Text="john" Height="42" Width="272" Margin="0,0,253,365" BorderThickness="0 0 0 1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Grid.ColumnSpan="2"/>
+            <TextBox x:Name="LNameTextBox" FontSize="24" Text="doe" Height="42" Width="272" Margin="0,0,253,305" BorderThickness="0 0 0 1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Grid.ColumnSpan="2"/>
+            <TextBox x:Name="PhoneTextBox" FontSize="24" Text="682-555-3412"  Height="42" Width="272" Margin="0,0,253,251" BorderThickness="0 0 0 1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Grid.ColumnSpan="2"/>
 
-        <Button Margin="371,561,371,81" x:Name="CheckInButton" FontSize="18" Content="Check In Bag" Click="CheckIn_Click" Grid.ColumnSpan="2" />
+            <Button Margin="371,561,371,81" x:Name="CheckInButton" FontSize="18" Content="Check In Bag" Click="CheckIn_Click" Grid.ColumnSpan="2" />
 
-        <!-- TEST BUTTONS -->
+            <TextBlock x:Name="GreetingTextBlock" FontSize="50" Margin="224,200,222,418" Grid.ColumnSpan="2">
+                <TextBlock.Style>
+                    <Style TargetType="{x:Type TextBlock}">
+                        <Style.Triggers>
+                            <Trigger Property="Visibility" Value="Visible">
+                                <Trigger.EnterActions>
+                                    <BeginStoryboard>
+                                        <Storyboard>
+                                            <DoubleAnimation Storyboard.TargetProperty="Opacity" Duration="00:00:03" BeginTime="00:00:00" From="0.0" To="1.0" />
+                                            <!--<DoubleAnimation Storyboard.TargetProperty="Opacity" Duration="00:00:03" BeginTime="00:00:02" From="1.0" To="0.0" />-->
+                                        </Storyboard>
+                                    </BeginStoryboard>
+                                </Trigger.EnterActions>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </TextBlock.Style>
+                Please Scan An RFID Tag
+            </TextBlock>
+        </Grid>
+        <Image x:Name="loadGif" Visibility="Hidden"
+                   wpfanimated:ImageBehavior.AnimatedSource="/Images/loading.gif"
+                   wpfanimated:ImageBehavior.RepeatBehavior="1"
+                   wpfanimated:ImageBehavior.AnimateInDesignMode="False"
+                   wpfanimated:ImageBehavior.AutoStart="True"              
+                   Height="300" Margin="215,172,214,243" />
     </Grid>
 </Controls:MetroWindow>
