--- a/IoT Dallas of Things WPF/MainWindow.xaml
+++ b/IoT Dallas of Things WPF/MainWindow.xaml
@@ -4,21 +4,17 @@
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns:wpfanimated="http://wpfanimatedgif.codeplex.com"
         Title="SmartBag" Height="768" Width="1000"
-        ResizeMode="NoResize" HorizontalAlignment="Center" VerticalAlignment="Center" BorderThickness="4"   TitleCaps="False" >
+        ResizeMode="NoResize" HorizontalAlignment="Center" VerticalAlignment="Center" BorderThickness="4"   TitleCaps="False" Icon="Content\Images\SmartBag.ico" >
+    
 
     <Grid Margin="0,0,0,45">
         <Grid x:Name="grid">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="563*"/>
-                <ColumnDefinition Width="429*"/>
-            </Grid.ColumnDefinitions>
             <Label Content="Smart Tag Number:" x:Name="TagLabel" FontSize="40" Margin="0,50,302,580" HorizontalAlignment="Right" Width="376" Grid.ColumnSpan="2"/>
-            <Label Content="Bus Number:" x:Name="BusLabel" FontSize="26" Margin="306,221,99.164,428" Width="158"/>
+            <Label Content="Bus Number:" x:Name="BusLabel" FontSize="26" Margin="298,222,530,427" Width="158"/>
             <Label Content="First Name:" x:Name="FirstNameLabel" FontSize="26" Margin="320,287,105.164,361" />
             <Label Content="Last Name:" x:Name="LastNameLabel" FontSize="26" Margin="328,347,101.164,300" />
             <Label Content="Phone Number:" x:Name="PhoneLabel" FontSize="26" Margin="272,399,101.164,251"/>
 
-            <!--<TextBlock x:Name="GreetingTextBlock" FontSize="50" Text="Please Scan An RFID Tag" Margin="224,200,222,418" Grid.ColumnSpan="2"/>-->
             <Label x:Name="RFIDTextBlock" FontSize="36" Content="82003C84DDE7" Margin="367,109,368,529" Grid.ColumnSpan="2" />
             <TextBox x:Name="BusNumTextBox" FontSize="24" Text="bus #" Height="42" Width="272" Margin="0,0,253,431" BorderThickness="0 0 0 1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Grid.ColumnSpan="2"/>
             <TextBox x:Name="FNameTextBox" FontSize="24" Text="john" Height="42" Width="272" Margin="0,0,253,365" BorderThickness="0 0 0 1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Grid.ColumnSpan="2"/>
@@ -47,11 +43,5 @@
                 Please Scan An RFID Tag
             </TextBlock>
         </Grid>
-        <Image x:Name="loadGif" Visibility="Hidden"
-                   wpfanimated:ImageBehavior.AnimatedSource="/Images/loading.gif"
-                   wpfanimated:ImageBehavior.RepeatBehavior="1"
-                   wpfanimated:ImageBehavior.AnimateInDesignMode="False"
-                   wpfanimated:ImageBehavior.AutoStart="True"              
-                   Height="300" Margin="215,172,214,243" />
     </Grid>
 </Controls:MetroWindow>
