--- a/IoT Dallas of Things WPF/MainWindow.xaml
+++ b/IoT Dallas of Things WPF/MainWindow.xaml
@@ -4,8 +4,7 @@
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns:wpfanimated="http://wpfanimatedgif.codeplex.com"
         Title="SmartBag" Height="768" Width="1000"
-        ResizeMode="NoResize" HorizontalAlignment="Center" VerticalAlignment="Center" BorderThickness="4"   TitleCaps="False" Icon="Content\Images\SmartBag.ico" >
-    
+        ResizeMode="NoResize"  HorizontalAlignment="Center" VerticalAlignment="Center" BorderThickness="4"   TitleCaps="False" Icon="Content\Images\SmartBag.ico">
 
     <Grid Margin="0,0,0,45">
         <Grid x:Name="grid">
@@ -16,10 +15,10 @@
             <Label Content="Phone Number:" x:Name="PhoneLabel" FontSize="26" Margin="272,399,101.164,251"/>
 
             <Label x:Name="RFIDTextBlock" FontSize="36" Content="82003C84DDE7" Margin="367,109,368,529" Grid.ColumnSpan="2" />
-            <TextBox x:Name="BusNumTextBox" PreviewTextInput="onlyThreeNumbers" FontSize="24" Text="bus #" Height="42" Width="272" Margin="0,0,253,431" BorderThickness="0 0 0 1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Grid.ColumnSpan="2"/>
-            <TextBox x:Name="FNameTextBox" PreviewTextInput="onlyText" FontSize="24" Text="john" Height="42" Width="272" Margin="0,0,253,365" BorderThickness="0 0 0 1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Grid.ColumnSpan="2"/>
-            <TextBox x:Name="LNameTextBox" PreviewTextInput="onlyText" FontSize="24" Text="doe" Height="42" Width="272" Margin="0,0,253,305" BorderThickness="0 0 0 1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Grid.ColumnSpan="2"/>
-            <TextBox x:Name="PhoneTextBox" PreviewTextInput="onlyNumbers" FontSize="24" Text="682-555-3412"  Height="42" Width="272" Margin="0,0,253,251" BorderThickness="0 0 0 1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Grid.ColumnSpan="2"/>
+            <TextBox x:Name="BusNumTextBox" MaxLength="3" PreviewTextInput="OnlyNumbers" FontSize="24" Text="bus #" Height="42" Width="272" Margin="0,0,253,431" BorderThickness="0 0 0 1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Grid.ColumnSpan="2"/>
+            <TextBox x:Name="FNameTextBox" PreviewTextInput="OnlyText" FontSize="24" Text="john" Height="42" Width="272" Margin="0,0,253,365" BorderThickness="0 0 0 1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Grid.ColumnSpan="2"/>
+            <TextBox x:Name="LNameTextBox" PreviewTextInput="OnlyText" FontSize="24" Text="doe" Height="42" Width="272" Margin="0,0,253,305" BorderThickness="0 0 0 1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Grid.ColumnSpan="2"/>
+            <TextBox x:Name="PhoneTextBox" MaxLength="10"  PreviewTextInput="OnlyNumbers" FontSize="24" Text="682-555-3412"  Height="42" Width="272" Margin="0,0,253,251" BorderThickness="0 0 0 1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Grid.ColumnSpan="2"/>
 
             <Button Cursor="Hand" Margin="371,561,371,81" x:Name="CheckInButton" FontSize="18" Content="Check In Bag" Click="CheckIn_Click" Grid.ColumnSpan="2" />
 
@@ -32,7 +31,6 @@
                                     <BeginStoryboard>
                                         <Storyboard>
                                             <DoubleAnimation Storyboard.TargetProperty="Opacity" Duration="00:00:03" BeginTime="00:00:00" From="0.0" To="1.0" />
-                                            <!--<DoubleAnimation Storyboard.TargetProperty="Opacity" Duration="00:00:03" BeginTime="00:00:02" From="1.0" To="0.0" />-->
                                         </Storyboard>
                                     </BeginStoryboard>
                                 </Trigger.EnterActions>
